@@ -1437,10 +1437,10 @@ gam.outer <- function(lsp,fscale,family,control,method,optimizer,criterion,scale
 
   if (optimizer[2]%in%c("nlm.fd")) .Deprecated(msg=paste("optimizer",optimizer[2],"is deprecated, please use newton or bfgs"))
 
-  if (optimizer[1]=="efs" && !inherits(family,"general.family")) {
-    warning("Extended Fellner Schall only implemented for general families")
-    optimizer <- c("outer","newton")
-  }
+#  if (optimizer[1]=="efs" && !inherits(family,"general.family")) {
+#    warning("Extended Fellner Schall only implemented for general families")
+#    optimizer <- c("outer","newton")
+#  }
 
   if (length(lsp)==0) { ## no sp estimation to do -- run a fit instead
     optimizer[2] <- "no.sps" ## will cause gam2objective to be called, below
@@ -1470,8 +1470,15 @@ gam.outer <- function(lsp,fscale,family,control,method,optimizer,criterion,scale
   
   if (optimizer[1]=="efs"&& optimizer[2] != "no.sps" ) { ## experimental extended efs
     ##warning("efs is still experimental!")
-    object <- efsud(x=G$X,y=G$y,lsp=lsp,Sl=G$Sl,weights=G$w,offset=G$offxset,family=family,
+    if (inherits(family,"general.family")) {
+      object <- efsud(x=G$X,y=G$y,lsp=lsp,Sl=G$Sl,weights=G$w,offset=G$offxset,family=family,
                      control=control,Mp=G$Mp,start=start)
+    } else {
+      family <- fix.family.ls(family)
+      object <- efsudr(x=G$X,y=G$y,lsp=lsp,Eb=G$Eb,UrS=G$UrS,weights=G$w,family=family,offset=G$offset,
+                       start=start,
+                       U1=G$U1, intercept = TRUE,scale=scale,Mp=G$Mp,control=control,n.true=G$n.true,...)
+    }
     object$gcv.ubre <- object$REML
   } else if (optimizer[2]=="newton"||optimizer[2]=="bfgs"){ ## the gam.fit3 method 
     if (optimizer[2]=="bfgs") 
@@ -1597,6 +1604,7 @@ estimate.gam <- function (G,method,optimizer,control,in.out,scale,gamma,start=NU
   }
 
   if (!optimizer[1]%in%c("perf","outer","efs")) stop("unknown optimizer")
+  if (optimizer[1]=="efs") method <- "REML"
   if (!method%in%c("GCV.Cp","GACV.Cp","REML","P-REML","ML","P-ML")) stop("unknown smoothness selection criterion") 
   G$family <- fix.family(G$family)
   G$rS <- mini.roots(G$S,G$off,ncol(G$X),G$rank)
@@ -2086,7 +2094,7 @@ gam.control <- function (nthreads=1,irls.reg=0.0,epsilon = 1e-7, maxit = 200,
                          mgcv.tol=1e-7,mgcv.half=15,trace =FALSE,
                          rank.tol=.Machine$double.eps^0.5,
                          nlm=list(),optim=list(),newton=list(),outerPIsteps=0,
-                         idLinksBases=TRUE,scalePenalty=TRUE,
+                         idLinksBases=TRUE,scalePenalty=TRUE,efs.lspmax=15,efs.tol=.1,
                          keepData=FALSE,scale.est="fletcher",edge.correct=FALSE) 
 # Control structure for a gam. 
 # irls.reg is the regularization parameter to use in the GAM fitting IRLS loop.
@@ -2139,12 +2147,13 @@ gam.control <- function (nthreads=1,irls.reg=0.0,epsilon = 1e-7, maxit = 200,
     # and optim defaults
     if (is.null(optim$factr)) optim$factr <- 1e7
     optim$factr <- abs(optim$factr)
+    if (efs.tol<=0) efs.tol <- .1
 
     list(nthreads=round(nthreads),irls.reg=irls.reg,epsilon = epsilon, maxit = maxit,
          trace = trace, mgcv.tol=mgcv.tol,mgcv.half=mgcv.half,
          rank.tol=rank.tol,nlm=nlm,
          optim=optim,newton=newton,outerPIsteps=outerPIsteps,
-         idLinksBases=idLinksBases,scalePenalty=scalePenalty,
+         idLinksBases=idLinksBases,scalePenalty=scalePenalty,efs.lspmax=efs.lspmax,efs.tol=efs.tol,
          keepData=as.logical(keepData[1]),scale.est=scale.est,edge.correct=edge.correct)
     
 }
